[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[project]
name = "iplib3"
dynamic = ["version"]
description = "A modern, object-oriented approach to IP addresses."
authors = [{ name = "Lari Liuhamo", email = "lari.liuhamo+pypi@gmail.com" }]
requires-python = ">=3.11.0"
readme = "README.md"
license = "MIT"
maintainers = [{ name = "Lari Liuhamo", email = "lari.liuhamo+pypi@gmail.com" }]
keywords = [
    "network",
    "networking",
    "ip",
    "ipaddress",
    "address",
    "python3",
    "pathlib",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://pypi.org/project/iplib3/"
Repository = "https://github.com/Diapolo10/iplib3"
Documentation = "https://github.com/Diapolo10/iplib3/tree/main/docs"
"Source code" = "https://github.com/Diapolo10/iplib3"
Tracker = "https://github.com/Diapolo10/iplib3/issues"
Changelog = "https://github.com/Diapolo10/iplib3/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "tox>=4.54.0",
    "tox-gh-actions>=3.5.0",
]

[tool.coverage.run]
branch = true
relative_files = true
omit = [
    ".tox/*",
    "tests/*",
]

[tool.coverage.report]
exclude_also = [
    "pragma: not covered",
    "@overload",
    "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.sdist.force-include]
"CHANGELOG.md" = "CHANGELOG.md"
LICENSE = "LICENSE"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.mypy]
exclude = ["tests/"]
exclude_gitignore = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest]
minversion = "9.0"
addopts = [
    "--doctest-modules",
    "--cov=./",
    "--cov-append",
    "--cov-fail-under=80",
    "--cov-report=html:tests/reports/coverage-html",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml:tests/reports/coverage.xml",
    "--ignore=docs/"
]
testpaths = [
    "tests",
]


[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "COM812",  # Missing trailing comma (disabled due to formatter conflict)
    "D203",    # One blank line before class docstring
    "D212",    # Multi-line summary first line
    "ISC001",  # Single-line implicit string concatenation (disabled due to formatter conflict)
    "PLR0913", # Too many arguments
    "Q000",    # Single quotes found but double quotes preferred
]
line-length = 120
show-fixes = true


[tool.ruff.lint.flake8-copyright]
author = "Lari Liuhamo"


[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"


[tool.ruff.lint.mccabe]
max-complexity = 15


[tool.ruff.lint.per-file-ignores]
# https://beta.ruff.rs/docs/rules/
"__init__.py" = ["F401", "F403", "F405", "PGH003",]
"tests/*" = ["ANN", "ARG", "INP001", "PLR2004", "S101",]


[tool.ruff.lint.pylint]
max-args = 15
max-branches = 20
max-returns = 15
max-statements = 80


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3{11, 12, 13, 14}, pypy3
skip_missing_interpreters = true

[gh-actions]
python =
    3.11: py311
    3.12: py312
    3.13: py313
    3.14: py314
    pypy-3.11: pypy3

[testenv]
pass_env =
    GITHUB_*
    FORCE_COLOR
allowlist_externals = uv

commands =
    uv run --active --frozen pytest
    uv run --active --frozen coverage report
"""

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { git = { commit = true, tags = true }},
]

[tool.uv-dynamic-versioning]
bump = true
fallback-version = "0.0.0"
style = "pep440"
vcs = "git"
